--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "chainlit>=2.5.5",
+    "mlflow>=2.22.0",
     "openai>=1.70.0",
     "openai-agents>=0.0.7",
 ]
